* nroff: Multibyte characters are now emboldened correctly. Previously,
  the number of backspace characters output corresponded to the length
  of the multibyte sequence instead of the column width of the character
  (bug reported by Alexander E. Patrakov).
* dpost: The line width for drawing has been fixed; previously, lines
  were 100 times too slim with the "ps" device.

Release 060321
* An revised version of the "Nroff/Troff User's Manual" is now available
  in the directory "doc/troff". It replaces the "NEWS" and "PDFS" text
  files; these have been removed.
* A typeset version of "Font Handling in Troff With PostScript Devices"
  is now available in the directory "doc/fonts". It replaces the "FONTS"
  text file that has been removed.
* [nt]roff: Hyphenation is now enabled by default. This is compatible
  with most other versions of troff, but differs from Solaris troff.
* troff/dpost: The characters \(or \- \` \' " # < > @ \ ^ ~ are now
  taken from the current font instead of the special font by default 
  if possible with the "ps" and "psmed" devices. The new DESC keyword
  "allpunct" controls this.
* troff: Kerning pairs from font metrics files that include "\[name]"
  characters now work correctly; they could previously apply to wrong
  characters with font files containing more than 260 characters, and
  were ineffective with smaller ones.
* troff: OpenType and TrueType kerning pairs with a position difference
  of zero are now completely ignored. They could previously overwrite a
  previous positioning difference for the same pair. Also if a kerning
  pair occurs more than once in the metrics file, the first definition
  read is now used instead of the last one.
* troff: In an OpenType font, if a kerning pair occurs in both a "Pair
  Positioning Adjustment" format 1 (kerning by specific glyphs) and a
  format 2 (kerning by glyph classes) table, the format 1 definition
  is now always used.